added task grouping by lists
